syntax = "proto3";

package buzz.protobuf;

///////////////////////////////////////////////////////////////////////////////////////////////////
// Buzz Logical Plan
///////////////////////////////////////////////////////////////////////////////////////////////////

message HBeeScanNode {
  string sql = 1;
  string source = 2;
  bytes schema = 3;

  oneof scan {
    S3ParquetScanNode s3_parquet = 10;
  }
}

message SizedFile {
  string key = 1;
  uint64 length = 2;
}

message S3ParquetScanNode {
  string region = 1;
  string bucket = 2;
  repeated SizedFile files = 3;
}

message HCombScanNode {
  string sql = 1;
  string source = 2;
  string query_id = 3;
  uint32 nb_hbee = 4;
  bytes schema = 5;
}
